fix sidebar z-index bug and add member data and projuct data objects

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ section.project-section {
 
 .hamburgur-container {
   position: fixed;
+  z-index: 999;
   background-color: #282828;
   padding: 20px;
   border-radius: 20px 0 0 20px;
